# magic-carpet

./: CMakeLists.txt  README.md  joystick_cml.txt  magiccarpet.service
magiccarpet/: CMakeLists.txt  magiccarpetConfig.h  magiccarpetConfig.h.in
magiccarpet/src/: main.cpp
scripts/: 2dpl.py
